--- a/ScreenCapture/MainWindow.xaml
+++ b/ScreenCapture/MainWindow.xaml
@@ -10,5 +10,6 @@
         <Button x:Name="btAttach" Content="윈도우 지정하기" HorizontalAlignment="Center" Margin="0" VerticalAlignment="Center" Width="300" FontSize="20" Click="btAttach_Click" Height="35"/>
         <Label x:Name="lbInfo" Content="현재상태 : 중지" Margin="0,0,0,231" VerticalAlignment="Bottom" FontSize="15" RenderTransformOrigin="0.406,-2.123" HorizontalAlignment="Center"/>
         <Button x:Name="btStop" Content="중지" HorizontalAlignment="Center" Height="35" Margin="0,130,0,0" VerticalAlignment="Center" Width="300" FontSize="20" Click="btStop_Click"/>
+        <Label x:Name="lbBorderInfo" Content="" Margin="0,280,0,0" VerticalAlignment="Top" FontSize="15" RenderTransformOrigin="0.406,-2.123" HorizontalAlignment="Center"/>
     </Grid>
 </Window>
